Code refactor (add more Dto), only application/json can be handle